--- a/index.html
+++ b/index.html
@@ -9,5 +9,28 @@
 </head>
 <body>
   <h1>Test Array</h1>
+  <div>
+    <form id="test-form">
+      <div class="question">
+        <label for="q1">Enter Something: </label>
+        <input id="q1" class="form-control" type="text">
+        <br>
+        <label for="q2">Enter Something: </label>
+        <input id="q2" class="form-control" type="text">
+        <br>
+        <label for="q3">Enter Something: </label>
+        <input id="q3" class="form-control" type="text">
+        <br>
+        <label for="q4">Enter Something: </label>
+        <input id="q4" class="form-control" type="text">
+
+      </div>
+      <button type="submit" class="btn-success"></button>Answer</button>
+    </form>
+  </div>
+</div>
+
+
+  </div>
 </body>
 </html>
