add array loop, not working

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <input id="q4" class="form-control" type="text">
 
       </div>
-      <button type="submit" class="btn-success"></button>Answer</button>
+      <button type="submit" class="btn-success">Answer</button>
     </form>
   </div>
 </div>
